# hcrystalball

./: .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  AUTHORS.rst  CHANGELOG.rst  CODE_OF_CONDUCT.md  LICENSE.txt  README.md  environment.yml  setup.cfg  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  other.md
.github/workflows/: cd-pypi,conda.yml  cd-pypi.yml  cd.yml  ci-conda.yml  ci.yml  create_binder_env.yml  precache_binder.yml
binder/: Dockerfile
conda/: conda_build_config.yaml  meta.yaml
dev/: FinerTimeSplit.drawio  FinerTimeSplitOverlap.drawio  SklearnModelLags.drawio  rossmann_ingestion.ipynb  run_nb.py  wrapper_after.drawio  wrapper_before.drawio
dev/rossmann-store-sales/: sample_submission.csv
docs/: README.md  api.rst  conf.py  contribution.rst  data_format.rst  glossary.rst  index.rst  install.rst  model_selection.rst  wrappers.rst
docs/_static/: theme_overrides.css
docs/examples/: 01_quickstart.ipynb  02_tutorial.ipynb  03_logging.ipynb
docs/examples/tutorial/model_selection/: 01_model_selector_basic.ipynb  02_model_selector_result_basic.ipynb  03_model_selector_advanced.ipynb
docs/examples/tutorial/wrappers/: 01_wrappers_intro.ipynb  02_ar_modelling_in_sklearn.ipynb  03_sklearn_pipeline.ipynb  04_seasonalities_and_holidays.ipynb  05_model_selection.ipynb  06_advanced_prophet.ipynb  07_advanced_sarimax.ipynb  08_ensembles.ipynb  09_transforming_target.ipynb
hcrystalball/: __init__.py
hcrystalball/compose/: _ts_column_transformer.py
hcrystalball/ensemble/: _stacking_ensemble.py
hcrystalball/metrics/: __init__.py  _scorer.py
hcrystalball/model_selection/: __init__.py  _model_selector_result.py  _split.py
hcrystalball/wrappers/: _base.py  _sklearn.py  _smoothing.py  _tbats.py
src/hcrystalball/: __init__.py  exceptions.py  utils.py
src/hcrystalball/compose/: __init__.py  _ts_column_transformer.py
src/hcrystalball/ensemble/: __init__.py  _simple_ensemble.py  _stacking_ensemble.py
src/hcrystalball/feature_extraction/: __init__.py  _holiday_transformer.py  _seasonal_transformer.py
src/hcrystalball/metrics/: __init__.py  _scorer.py
src/hcrystalball/model_selection/: __init__.py  _configuration.py  _data_preparation.py  _large_scale_cross_validation.py  _model_selector.py  _model_selector_result.py  _split.py  utils.py
src/hcrystalball/preprocessing/: __init__.py  _endog_transformer.py
src/hcrystalball/wrappers/: __init__.py  _base.py  _neural_prophet.py  _prophet.py  _sarimax.py  _sklearn.py  _smoothing.py  _statsmodels.py  _tbats.py
tests/: conftest.py
tests/integration/: test_data_unchanged.py  test_frequency.py  test_models_integration.py  test_set_params_get_params.py
tests/unit/: test_utils.py
tests/unit/compose/: test_ts_column_transformer.py
tests/unit/feature_extraction/: test_holiday_transformer.py  test_seasonality_transformer.py
tests/unit/metrics/: test_scorer.py
tests/unit/model_selection/: test_configuration.py  test_data_preparation.py  test_model_selection.py  test_model_selection_utils.py  test_model_selector.py  test_prefect_executors.py  test_time_splitter.py
tests/unit/preprocessing/: test_endog_transformer.py
tests/unit/wrappers/: test_base.py  test_prophet_wrapper.py  test_sarimax_wrapper.py  test_sklearn_wrapper.py  test_smoothing_wrapper.py  test_statsmodels_wrapper.py  test_tbats_wrapper.py
tests/unit/wrappers/ensembles/: test_ensembles.py
